Add ruffle for flash emulation

--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -72,6 +72,7 @@ document.addEventListener("DOMContentLoaded", function() {
   }
 });
 </script>
+<script src="/ruffle/20210126/ruffle.js" defer></script>
 <!-- end NLA extras -->
 
 {{ banner_html }}
