--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -75,6 +75,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="{{ static_prefix }}/ruffle/20210126/ruffle.js"></script>
 <script>
 window.RufflePlayer.config.publicPath = "{{ static_prefix }}/ruffle/20210126/";
+window.RufflePlayer.config.autoplay = "on";
 </script>
 <!-- end NLA extras -->
 
