ruffle: try hiding the unmuteOverlay as it's a bit invasive

--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -76,6 +76,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <script>
 window.RufflePlayer.config.publicPath = "{{ static_prefix }}/ruffle/20210126/";
 window.RufflePlayer.config.autoplay = "on";
+window.RufflePlayer.config.unmuteOverlay = "hidden";
 </script>
 <!-- end NLA extras -->
 
