Revert "Disable autoplay again, it's confusing and eats clicks"
This reverts commit cc3c4ac0708e890e8a716d95f0122e29a3c4cfd1.

--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -75,6 +75,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="{{ static_prefix }}/ruffle/20210126/ruffle.js"></script>
 <script>
 window.RufflePlayer.config.publicPath = "{{ static_prefix }}/ruffle/20210126/";
+window.RufflePlayer.config.autoplay = "on";
+window.RufflePlayer.config.unmuteOverlay = "hidden";
 </script>
 <!-- end NLA extras -->
 
