--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -76,7 +76,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 // https://webarchive.nla.gov.au/awa/20001004130000/http://www.unolympics.com/index.html
 if (wbinfo.url.startsWith("http://www.unolympics.com/")) {
-  document.layers = true; // trick version detection into thinking we're Netspace 4
+  document.layers = true; // trick version detection into thinking we're Netscape 4
 }
 </script>
 <script src="{{ static_prefix }}/ruffle/20210126/ruffle.js"></script>
