--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -92,6 +92,10 @@ document.addEventListener("DOMContentLoaded", function() {
 if (wbinfo.url.startsWith("http://www.unolympics.com/")) {
   document.layers = true; // trick version detection into thinking we're Netscape 4
 }
+// https://webarchive.nla.gov.au/awa/20170802002621/http://pandora.nla.gov.au/pan/14247/20170802-0307/www.gymnastics.org.au/index.html
+if (wbinfo.url.match("/www.gymnastics.org.au/")) {
+  document.cookie = "Asi.Web.Browser.CookiesEnabled=true;path=/;SameSite=None;Secure"; // trick cookie detection logic
+}
 </script>
 <script src="{{ static_prefix }}/ruffle/20210126/ruffle.js"></script>
 <script>
