--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -1,3 +1,5 @@
+{% autoescape false %}
+
 <!-- WB Insert -->
 <script>
 {% set urlsplit = cdx.url | urlsplit %}
@@ -105,6 +107,8 @@ window.RufflePlayer.config.unmuteOverlay = "hidden";
 <!-- end NLA extras -->
 
 {{ banner_html }}
+
+{% endautoescape %}
 
 <!-- End WB Insert -->
 
