--- a/awa/templates/head_insert.html
+++ b/awa/templates/head_insert.html
@@ -85,7 +85,8 @@ document.addEventListener("DOMContentLoaded", function() {
     if (file.endsWith(".mp4")) {
       src = file;
     } else if (file.endsWith(".flv")) {
-      let flvUrl = new URL(file, document.location).toString().substr(wbinfo.prefix.length + wbinfo.request_ts.length + 1)
+      let flvUrl = new URL(file, document.location).toString().substring(wbinfo.prefix.length +
+          wbinfo.request_ts.length + wbinfo.mod.length + 1)
       src = wbinfo.static_prefix + "/transcode?date=" + wbinfo.timestamp + "&url=" + encodeURIComponent(flvUrl);
     } else {
       continue;
